fixed mobile footer appearing behind content at top

--- a/sass/partials/_footer.scss
+++ b/sass/partials/_footer.scss
@@ -66,4 +66,8 @@
     }
 
   }
+
+  &.inactive {
+    opacity: 0;
+  }
 }
